--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 /*@import url(https://fonts.googleapis.com/css?family=Inconsolata:400);*/
 @import "common.css";
 
-#jsonEditor{font-size: 1em;position:relative;margin:0 0 8px 0;padding:15px;border:1px solid #ddd;background-color: #eee;border-radius:2px}
+#jsonEditor{font-size: 1em;position:relative;margin:0 0 8px 0;padding:15px;border:1px solid #ddd;background-color: #eee;}
 keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 @-webkit-keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 @-moz-keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
@@ -122,7 +122,7 @@ h1{font-size:1.5em}
 
 .error-line {position: absolute;left: -15px;top: -25px;background:-webkit-linear-gradient(#909090,#5a5a5a);border:1px solid #616161;color:#fff;font-size:12px;padding:0 6px;height:20px;line-height:18px;font-family:monospace;border-radius:2px;cursor:default}
 
-.tip{display: block;font-size: 12px;background-color: #808080;color: #fff;padding: 6px;border: 1px solid #616161;border-radius: 2px;margin-top: 6px}
+.tip{display: block;font-size: 12px;background-color: #808080;color: #fff;padding: 6px;border: 1px solid #616161;margin-top: 6px}
 .tip > .t-point {display: inline-block;padding-left: 14px;margin: 3px 0}
 
 .t-point:before {content: "\f05a";font-family: FontAwesome;margin-right: 4px;margin-left: -14px}
